5754
Ah, my fault.  At first I was a little amazed at this result:
{code}
scala> { val b = a ; val a = 1 ; b }
res2: Int = 1
{code}
Now I see what happened:
{code}
scala> def foo() = 1
foo: ()Int

scala> { val b = a ; val a = foo() ; b }
<console>:9: error: forward reference extends over definition of value b
       { val b = a ; val a = foo() ; b }
                 ^
{code}
So this is due to r23262, which explains the motivation.
